<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/color_primary"
        android:elevation="@dimen/toolbar_elevation"
        android:titleTextAppearance="@style/Toolbar.Title" />

    <LinearLayout
        android:id="@+id/state_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_title"
        android:elevation="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/title_margin"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/state_on"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <!--
            Space here to make it work on RTL layouts
        -->

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/state_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="@dimen/switch_margin"
            android:checked="true" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/card_elevation"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/action_lockscreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:minHeight="@dimen/material_54">

                    <CheckBox
                        android:id="@+id/action_lockscreen_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_16"
                        android:checked="false" />

                    <LinearLayout
                        android:id="@+id/clear_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/material_72"
                        android:layout_marginTop="@dimen/space_16"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/settings_lockscreen"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/settings_lockscreen_desc"
                            android:textColor="@color/gray_dark" />

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/material_72"
                    android:background="@color/gray_light" />

                <RelativeLayout
                    android:id="@+id/action_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:minHeight="@dimen/material_54">

                    <CheckBox
                        android:id="@+id/action_calculate_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_16"
                        android:checked="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/material_72"
                        android:layout_marginTop="@dimen/space_16"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/settings_calculate"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/settings_calculate_desc"
                            android:textColor="@color/gray_dark" />

                    </LinearLayout>

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/material_72"
                    android:background="@color/gray_light" />

                <RelativeLayout
                    android:id="@+id/action_strip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:minHeight="@dimen/material_54">

                    <CheckBox
                        android:id="@+id/action_strip_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_16"
                        android:checked="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space_16"
                        android:layout_marginEnd="@dimen/space_16"
                        android:layout_marginStart="@dimen/material_72"
                        android:layout_marginTop="@dimen/space_16"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/settings_strip"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/settings_strip_desc"
                            android:textColor="@color/gray_dark" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/comment_height">


                <LinearLayout
                    android:id="@+id/ambient_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/space_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/comment_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/settings_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/subtitle_margin_top"
                        android:lineSpacingMultiplier="1.1"
                        android:text="@string/comment_subtitle"
                        android:textColor="@color/gray_dark" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>